--- a/blog/article/templates/article/article.html
+++ b/blog/article/templates/article/article.html
@@ -5,9 +5,26 @@
     <title>部落格</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'article/css/article.css' %}">
   </head>
   <body>
     {% include 'main/menu.html' %}
-    <h2>部落格說 -- Hello world!</h2> 
+    <h2>歡迎來到我的部落格</h2>
+    <br> 
+    {% for items in itemList %}
+      {% for item in items %}
+        {% if forloop.first %}
+          <h3>{{ item.title }}</h3>
+          <p>發表時間：{{ item.pubDateTime|date:'Y-m-d H:i' }}</p>
+          <div class="articleContent">{{ item.content|linebreaks|truncatechars_html:30 }}</div>
+        {% else %}
+          <div class="commentDiv">
+            <span class="comment">{{ item.content }}</span><br>
+            <span class="commentTime">{{ item.pubDateTime|date:'m月d日 H:i' }}</span>
+          </div>
+        {% endif %}
+      {% endfor %}
+      <hr>
+    {% endfor %}
   </body>
 </html>
