--- a/blog/article/templates/article/article.html
+++ b/blog/article/templates/article/article.html
@@ -1,18 +1,13 @@
-<!doctype html>
+{% extends 'main/base.html' %}
 {% load staticfiles %}
-<html>
-  <head>
-    <title>部落格</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'article/css/article.css' %}">
-  </head>
-  <body>
-    {% include 'main/menu.html' %}
-    <h2>歡迎來到我的部落格</h2>
-    {% include 'main/messages.html' %}
-    {% include 'article/searchForm.html' %}
-    <p class="inlineBlock"><a class="btn" href="{% url 'article:articleCreate' %}">新增文章</a></p>
+{% block css %}
+<link rel="stylesheet" href="{% static 'article/css/article.css' %}">
+{% endblock %}
+{% block heading %}歡迎蒞臨{% endblock %}
+{% block content %}
+{% include 'article/searchForm.html' %}
+<p class="inlineBlock"><a class="btn" href="{% url 'article:articleCreate' %}">新增文章</a></p>
+
     <br><br><hr>
     {% for items in itemList %}
       {% for item in items %}
@@ -30,10 +25,10 @@
             <span class="commentTime">{{ item.pubDateTime|date:'m月d日 H:i' }}</span>
           </div>
         {% endif %}
-      {% endfor %}
-      <hr>
-    {% endfor %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  {% endfor %}
+  <hr>
+{% endfor %}
+{% endblock %}
+{% block script %}
   <script src={% static 'main/js/deleteConfirm.js' %}></script>
-  </body>
-</html>
+{% endblock %}
