--- a/blog/article/templates/article/articleCreateUpdate.html
+++ b/blog/article/templates/article/articleCreateUpdate.html
@@ -1,19 +1,21 @@
-<!doctype html>
+{% extends 'main/base.html' %}
 {% load staticfiles %}
-<html>
-  <head>
-    <title>部落格</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'article/css/article.css' %}">
-  </head>
-  <body>
-    {% include 'main/menu.html' %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'article/css/article.css' %}">
+{% endblock %}
+{% block heading %}
+  {% if article %}
+    修改文章
+  {% else %}
+    新增文章
+  {% endif %}
+{% endblock %}
+{% block content %}
 	{% if article %}
-	  <h2>修改文章</h2>
+
 	  <form method="post" action="{% url 'article:articleUpdate' article.id %}">
 	{% else %}
-	  <h2>新增文章</h2>
+
 	  <form method="post" action="{% url 'article:articleCreate' %}">
 	{% endif %}
       {% csrf_token %}
@@ -21,5 +23,4 @@
       <input class="btn" type="submit" value="送出">
       <a class="btn" href="{% url 'article:article' %}">放棄</a>
     </form>
-  </body>
-</html>
+{% endblock %}
